# Pomato

./: CMakeLists.txt  README.md
nvis/math/: array.hpp  bezier.hpp  bezier_spline.hpp  bounding_box.hpp  dopri5.hpp  fixed_matrix.hpp  fixed_vector.hpp  inline_.hpp  marching_cubes_table.hpp  tiny_array.hpp  var_base.hpp  var_vector.hpp  vec_array.hpp
nvis/util/: implicit_iterator.hpp  stride_iterator.hpp  stringutil.hpp  timer.hpp  wall_timer.hpp
nvis/vis/: integral_curve.hpp  streamline.hpp
resources/: jupiter-europa.info  systems.csv
resources/images/: Europa_Voyager_GalileoSSI_global_mosaic_500m.tif  README.txt
script/: .pomato.py.swp  JupiterEuropa.sh  JupiterEuropa_manifold_only.sh  pomato.py  runPMATEbasic.sh  systems.csv
script/params/: emTopoMan.C2.96000.mset  jeTopoMan.C3.0034.mset  map_params.txt  map_params_JE.txt  sencGeneralManifold.mset
xavier/: CMakeLists.txt
xavier/cmake/: FindGLUI.cmake  FindKDTREEPP.cmake
xavier/convolution/: CMakeLists.txt  OCData.sh  OCDataApse.sh  OCPics.sh  OCProcess.sh  OrbitAvgStandardMap.cu  README.txt  initializeNoise.cpp  orbitConvolution.hpp  singleConvolutionPass.cpp
xavier/convolution/Matlab/: README.txt  orbitConvolution.m  preOrbitConvolution.m  simple-unsharp-mask.scm
xavier/cr3bp/: CMakeLists.txt  CMakeLists.txt.edited  MultipleShooting.hpp.orig  PlanarL4Section.hpp  ThetaSection.hpp  apse_section.hpp  compare_rhs.cpp  computeMapOC.cpp  computeMapOC_Apse.cpp  computeMapOC_thetaL4.cpp  computeMapOC_yL4.cpp  convexhull2D.hpp  cr3bp.hpp  cr3bpCellChecker.hpp  cr3bp_analysis.cpp  cr3bp_plot.cpp  cr3bp_plot2.cpp  geom.hpp  multipleAngleTracker.hpp  pcr3bp.hpp  planar_section.hpp  plot_winding.cpp  plot_winding2.cpp  plot_winding3.cpp  plot_windingVec.cpp  plot_winding_Avizo.cpp  pmateAdaptiveGrid.cpp  pmateManifoldCreator.cpp  pmateMergeFPData.cpp  pmateTabulateFPX.cpp  pmateTopologyExtraction.cpp  psiWrite.hpp  testIntersection.cpp  test_AstroManifold.cpp  test_MapDisp.cpp  test_Monodromy.cpp  test_MultipleShooting.cpp  test_Newton.cpp  test_STHManifold.cpp  test_SaddleMan.cpp  (+12 more)
xavier/cr3bp/matlab/: JE_FixedPointTest.m  cr3bp.m  cr3bpPartials.m  jacobi.m  positiveycross.m  stm.m
xavier/data/: adaptive_grid.hpp  cell.hpp  edge.hpp  grid.hpp  raster_data.hpp
xavier/design/: PeriodicOrbit.hpp  Trajectory.hpp
xavier/graphics/: GLUT_helper.hpp  colors.hpp
xavier/graphics/CUDA/: CudaCamera.cuh  CudaCell3D.cu  CudaConstants.cuh  CudaMatrices.cuh  CudaMatrixCSR.cuh  CudaMatrixTree.cuh  CudaRay.cu  CudaRayTreeTraversal.cuh  CudaTransferFunction.cuh  CudaUtils.cu  CudaWrapper.h
xavier/graphics/Camera/: Camera.h  CameraWrapper.h  CameraWrapper_Misc.h  VirtualTrackball.h
xavier/graphics/GFXMath/: BoundingBox.h  DirectionConstants.h  Eigenvector.h  Frustum.h  GeometricUtils.h  MathUtils.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Ray.h  VectorN.h
xavier/graphics/GUI/: GLUI_Wrapper.h
xavier/graphics/Grid/: Grid2D_Regular.h  Grid2D_Regular_Base.h  Grid2D_Regular_CSR.h  Grid2D_Regular_Sparse_I1.h  Grid3D_Collection.h  Grid3D_Pow2_Base.h  Grid3D_Regular.h  Grid3D_Regular_Base.h  Grid3D_Regular_Block.h  Grid3D_Regular_Block_NoData.h  Grid3D_Regular_CSR.h  Grid3D_Regular_Sparse_I1.h  Grid3D_Regular_Sparse_I2.h  Grid3D_Regular_Sparse_I3.h  Grid3D_Regular_Sparse_NoData.h  Grid3D_Regular_Sparse_Vec.h  Grid3D_Staggered.h  GridUtils.h
xavier/image/: nrrd_wrapper.hpp
xavier/maps/: CMakeLists.txt  DP45wrapper.hpp  adaptiveGridMapInterface.hpp  cellConvexityChecker.hpp  definitions.hpp  fixpoints.cpp  fixpoints.hpp  fixpoints.tpp  index.hpp  interval.hpp  invariant_manifold.hpp  map2d.hpp  mapExceptions.hpp  mapNd.hpp  map_analysis.cpp  map_analysis.hpp  map_analysis_param.hpp  map_ftle.cpp  metric.hpp  misc.hpp  models.hpp  newton.cpp  newton.hpp  orbits.hpp  parallel_analysis_stdmap.cpp  poincare_map.hpp  rhs_base.hpp  section.hpp  standard_map.hpp  test_flow_map.cpp  test_stdmap.cpp  winding.hpp
xavier/math/: angle.hpp  equations.hpp  intersection.hpp  misc.hpp  rational.hpp  sort.hpp  vector_manip.hpp
xavier/misc/: cxxopts.hpp  filename.hpp
xavier/orbital/: controller.hpp  corrections.hpp  lnsearch.hpp  monodromy.hpp  progenitor.hpp  qnMultiShoot.hpp  qnSingleShoot.hpp  quasiNewtonRootFind.hpp
xavier/pmate/: AdaptiveSampler.hpp  FixedPointData.hpp  FixedPointDataFilters.hpp  ManifoldConnection.hpp  ManifoldData.hpp  TopologyExtractor.hpp
xavier/topology/: AdaptiveEdge.hpp  AdaptiveEdgeRotation.hpp  CATtracker.hpp  EdgeRotationFailure.hpp  EdgeRotationMapCalls.hpp  Edge_Rotation.hpp  EnglandManifold.hpp  FixedPointTests.hpp  ManifoldClasses.hpp  ManifoldDataStorage.hpp  MapManifold.hpp  MapManifoldSegment.hpp  STHManifold.hpp  SectionTransversality.hpp  SortableReturnData.hpp  invariant_manifold.hpp  writeManifoldDataStorage.hpp
xavier/vis/: #vtk_data_helper.hpp#  CMakeLists.txt  DisplayManifolds.cpp  DisplayManifolds.h  ManifoldData.cpp  ManifoldData.h  display_topology.cpp  display_topology.hpp  vtk_camera_helper.hpp  vtk_data_helper.hpp  vtk_image_helper.hpp  vtk_macros.hpp  vtk_utils.hpp
